# AI-Lawyer

./: .render.yaml  README.md
backend/: .env.example  app.py  pyproject.toml  requirements.txt
frontend/: .env  .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  color.md  main.jsx
frontend/src/component/: About.jsx  Advantage.jsx  FAQ.jsx  Footer.jsx  FooterTwo.jsx  Hero.jsx  Navbar.jsx  Testimonials.jsx
frontend/src/component/bot/: Bot.jsx
frontend/src/pages/: About.jsx  Contact.jsx  HomePage.jsx  Login.jsx  Signup.jsx
frontend/src/routes/: AppRoutes.jsx
